Closed Bug 38244 Opened 26 years ago Closed 26 years ago

modified files cached incorrectly

Categories

(Core :: Networking: Cache, defect, P3)

x86
Windows NT
defect

Tracking

()

VERIFIED FIXED

People

(Reporter: sean, Assigned: neeti)

References

Details

(Whiteboard: [nsbeta2+] ETA 07/21)

Attachments

(1 file)

From Bugzilla Helper: User-Agent: Mozilla/4.0 (compatible; MSIE 5.01; Windows NT 5.0) BuildID: 2000042708 If you view a page, then modify it - remove about half the file, and then view it again, when you press reload, there is junk at the end of the rendering of the modified page. Reproducible: Not quite 100% Steps to Reproduce: 1. view a page via http (not a problem when using file:) that you can modify 2. leave the browser open and modify the page - remove about half of it (I used an external editor) 3. reload the page - will probably display ok 4. reload again - now there's cruft from the first version at the bottom of the page - html tags, etc displayed as text content Deleting all the cache directories between steps 2 and 3 fixes the problem.
I have noticed the following: using file:/... url on a Samba drive from NT 4.x (could be time-sync problem) mozilla did not *completely* reload the file if the file was modified on Linux. The file was only refreshed up to original size and the newly appended data was not displayed (only the modifications within original size) Build 2000050820 (mem+disk cache enabled)
added 4xp keyword
Keywords: 4xp
Nominating for nsbeta2
Assignee: gordon → neeti
Keywords: nsbeta2
Target Milestone: --- → M17
Putting on [nsbeta2-] radar.
Whiteboard: [nsbeta2-]
Oops. Read the bug incorrectly. Putting on nsbeta2+ radar.
Whiteboard: [nsbeta2-] → [nsbeta2+]
Does this affect dynamically generated pages?
Status: NEW → ASSIGNED
*** Bug 43276 has been marked as a duplicate of this bug. ***
*** Bug 44197 has been marked as a duplicate of this bug. ***
Jan: yes this will affect dynamic pages.
Whiteboard: [nsbeta2+] → [nsbeta2+] ETA 07/21
Checked in a fix. Neeti
Status: ASSIGNED → RESOLVED
Closed: 26 years ago
Resolution: --- → FIXED
this fix crashes us in submitting comments to bugzilla I think.
Do I need to set any special options for the fix to work? I did a pull 7/21 around 11am and still see the problem.
I can reproduce the problem using each of the 3 Cache settings: "Once per session", "Everytime I view the page", and "Never".
Sean, Could you tell me the steps you are performing to reproduce this bug? Thanks, Neeti
The steps to reproduce are in the attachment. You will need to load the file on a server that you have write access to in order to modify the file as required.
Sean, I followed the following steps you provided 1. Load this page in the browser and leave it open 2. Open the html file in an editor 3. In the editor, delete half of the embed tags and save the file 4. In mozilla, press the reload button 5. In the editor, restore the deleted lines and save the file 6. In mozilla, press the reload button 7. repeat step 3 8. In mozilla, press the reload button 2 more times In step 4, I see half the embedded tags. In step 6, I see all the embedded tags. In step 8, I see half the embedded tags, each time I reload the page. I am not able to reproduce the bug. Neeti
For me, after step 8, I see half the plugins, then html code and then more plugins at the bottom. Are you viewing the page using http:// (not reproducible using file://)? I've reproduced it using a Netscape web server (don't know the version) and IIS 5.0 on win2k.
Sean, Yes, I am using http:// and not file://. Can you try clearing your cache and then performing all the steps you described? Thanks, Neeti
Yes - I've cleared the cache by deleting all the cache directories before I start mozilla. I did a depend build this morning. I'll clobber and do a full build and post an update this afternoon.
I clobbered everything I had, did a pull from the tip around 3:30pm PST and did a full build (Win32 on Windows 2000). The testcase and steps I outlined are giving me 100% reproducibility. The interesting thing is that in Step 8 - the first time I press reload the page renders correctly. It's any subsequent reload (with no change to the content) that the page is rendered incorrectly.
I did a full pull and clobber build 7/22 on a different machine (vc6 on NT4). Uploaded the testcase to a different server than those I tested on Friday. Can still reproduce with 100% consistency.
I went through the steps listed a couple of times and I'm also unable to reproduce this. Marking worksforme.
verified: WinNT 2000080304
Status: RESOLVED → VERIFIED
*** Bug 31424 has been marked as a duplicate of this bug. ***
*** Bug 44785 has been marked as a duplicate of this bug. ***
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: