Fix for bug 38244 - modified files cached incorrectly,r=ruslan@netscape.com