netwerk/protocol/http/src/nsHTTPChannel.cpp
@@ -1764,6 +1764,18 @@ nsresult nsHTTPChannel::ResponseCompleted(
         }
     }
 
+    PRUint32 contentLength;
+    PRUint32 logicalLength;
+    mCacheEntry->GetLogicalLength(&logicalLength);
+    if (logicalLength) 
+    {
+        mCacheEntry->GetStoredContentLength(&contentLength);
+        if (contentLength > logicalLength) 
+        {
+            mCacheEntry->SetStoredContentLength(logicalLength);
+        }
+    }
+
     //
     // After the consumer has been notified, remove the channel from its 
     // load group...  This will trigger an OnStopRequest from the load group.
